Solution to (40) Combination Sum II